--- a/templates/viewstudentlists.html
+++ b/templates/viewstudentlists.html
@@ -109,7 +109,7 @@
     </div>
 
     <div id="textbox-container">
-        <input type="text" id="request-student" class="simple-input ui-corner-all blur-on-esc" placeholder="Type hier het emailadres van de leerling om voortestellen zijn of haar coache te worden"/>
+        <input type="text" id="request-student" class="simple-input ui-corner-all blur-on-esc" placeholder="Type hier het emailadres van de leerling om voor te stellen zijn of haar coach te worden"/>
         <input type="text" id="add-to-list" class="simple-input ui-corner-all blur-on-esc" placeholder="Type hier de naam van de leerling om hem of haar toe te voegen aan de lijst" style="display: none"/>
     </div>
 
