--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -13,25 +13,27 @@
     <div class="col1 sixty-forty">
         <h2 class="section-headline">Help mee!</h2>
 		<p>
-			We kunnen je hulp goed gebruiken! Geloof je ook in de mogelijkheden die de Khan Academie biedt? Help dan mee met:</p>
+			We kunnen je hulp goed gebruiken. Geloof je ook in de mogelijkheden die de Khan Academie biedt? Help dan mee met:</p>
 			<ul>
 				<li style="font-size:14px;"><a href="http://blog.khanacademie.nl/p/help-met-vertalen.html">het vertalen van reken- en wiskundeoefeningen</a></li>
 				<li style="font-size:14px;"><a href="http://blog.khanacademie.nl/p/maak-filmpjes.html">het maken van uitlegvideo's</a></li>
 				<li style="font-size:14px;"><a href="http://blog.khanacademie.nl/p/content-voor-taaloefeningen.html">het ontwikkelen van content voor taaloefeningen</a></li>
 			</ul>
-			<p>Daarnaast zijn we erg benieuwd naar ervaringen uit de praktijk, zoals ook te zien op&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://www.khanacademy.org/stories" target="_blank">http://www.khanacademy.org/stories</a>
+			<p>Daarnaast zijn we erg benieuwd naar ervaringen uit de praktijk. Buitenlandse ervaringen staan op&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://www.khanacademy.org/stories" target="_blank">http://www.khanacademy.org/stories</a>
+		</p>		
+		<p>Jan Knevers deelt elke week zijn ervaringen in de klas op <a href="http://blog.khanacademie.nl" target="_blank">blog.khanacademie.nl</a>
 		</p>
 	</div>
     
     <div class="clear"></div>
     <hr>
     <div class="col1 sixty-forty">
-			<h2>Spread the word!</h2>
+			<h2>Verspreid het nieuws!</h2>
 			<p>
-				Ook een goede manier om te helpen, is door anderen te vertellen over de Nederlandse Khan Academie.
+				Door anderen te vertellen over de Khan Academie help je ons ook.
 				De eerste enthousiaste gebruikers zijn er, er zijn zelfs al scholen die er gebruik van maken, maar er is eigenlijk geen enkele reden waarom  
 				niet heel Nederland leert met behulp van de Khan Academie.
-				Vertel je netwerk over de kracht, het nut en de mogelijkheden van de Khan Academie!
+				Vertel je netwerk over de kracht, het nut en de mogelijkheden van de Khan Academie.
 			</p>
 			<p>
 				<a href="http://www.facebook.com/pages/Khanacademie-NL/123650984422563" class="simple-button action-gradient social-button">
