--- a/templates/about/gettingstarted.html
+++ b/templates/about/gettingstarted.html
@@ -56,7 +56,7 @@
         <img src="/images/exercise-dashboard-medium.png" height="250" width="320" class="rounded-background">
     </a>
     <p>
-        Iedereen kan de site gratis gebruiken. Gebruik je Google account om <a href="/login">in te loggen</a> (in een latere fase hopen we Facebook login toe te voegen). 
+        Iedereen kan de site gratis gebruiken. Gebruik je Google- of Facebook account om <a href="/login">in te loggen</a>  
 		Door in te loggen kun je je voortgang zien en punten en badges verdienen.
     </p>
     <p>
@@ -101,7 +101,7 @@
         <h2> Meer dan alleen video's</h2>
         <p class="justify">
             Onze <a href="/#browse">collectie video's</a> omvat <strong>reken en wiskunde,</strong> maar ook video's over oefeningen die nog in ontwikkeling zijn,zoals. Elke video is een les van tussen de vijf en tien minuten waarin uitleg wordt gegeven over één onderwerp. 
-            Geïnspireerd op de video's van Salman Khan en zijn woorden: ''Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij en ik ben een levensecht mens die gefascineerd is door de wereld om hem heen. 
+            Geïnspireerd door de video's van Salman Khan en zijn woorden: ''Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij en ik ben een levensecht mens die gefascineerd is door de wereld om hem heen. 
             Voor onze website willen wij graag dat iedereen die denkt een bijdrage te kunnen leveren in het onderwijs via de Khan Academie die kans krijgt. Bij help mee kun je zien hoe ook jij van betekenis kunt zijn voor de Khan Academie.</em><br/>
             &mdash;
         </p>
