help mee pagina

--- a/templates/coach_resources/toolkit_content/ka-classrooms.html
+++ b/templates/coach_resources/toolkit_content/ka-classrooms.html
@@ -12,14 +12,14 @@
         <p class="has-media"><span class="toolkit-media"><a href="/exercise/derivative_intuition"><img width="80%" src="/images/splashthumbnails/exercises/ex1.png" /></a></span>
 		<ul class="bullet">
 		<li>KA genereert een <strong>onbeperkt aantal willekeurige vragen</strong> in diverse onderwerpen, variërend van optellen/aftrekken tot logaritmen. Leerlingen kunnen bij elk probleem feedback en hints krijgen. Het systeem houdt de vorderingen van leerlingen bij, zodat jij geen huiswerk meer hoeft na te kijken.</li>
-		<li>Omdat omgaven willekeurig gekozen worden, <strong>kunnen leerlingen hun huiswerk niet kopiëren.</strong></li>
+		<li>Doordat opgaven willekeurig gekozen worden, <strong>kunnen leerlingen hun huiswerk niet kopiëren.</strong></li>
 		<li>Khan Academie heeft op dit moment 300 Nederlandstalige oefeningen en video's, leerlingen kunnen <strong>in hun eigen tempo</strong> de stof tot zich nemen of opgaven nogmaals bekijken.</li>
 	</ul>
 		
         <p><h3>Data</h3></p>
         <p class="has-media"><span class="toolkit-media"><iframe width="100%" height="200" src="http://www.youtube.com/embed/DLt6mMQH1OY" frameborder="0" allowfullscreen></iframe></span><p>
 		<ul class="bullet">
-		<li>Alle data is beschikbaar voor alle coaches(leraren, ouders, mentoren) op elk moment.</li>
+		<li>Alle data is beschikbaar voor alle coaches (leraren, ouders, mentoren) op elk moment.</li>
 		<li>Alle data is gemakkelijk in te zien. Bekijk de voortgang van de klas of bekijk per individu waar problemen optreden. Er is gemakkelijk in te zien wie waar hulp nodig heeft en welke studenten al verder zijn.</li>
 		<li>Doordat precies bekend is welke student hulp nodig heeft is het mogelijk om deze studenten de<strong> aandacht te geven die ze nodig hebben.</strong></li>
 	</ul>
