--- a/templates/coach_resources/toolkit_content/setting-up-accounts.html
+++ b/templates/coach_resources/toolkit_content/setting-up-accounts.html
@@ -38,14 +38,14 @@
                 <img src="/images/profile-link-in-header.png?1" class="vertical-shadow rounded-background" />
             </li>
             <li>
-                <p>Daarna moeten zij op de "coach" tab klikken.p>
+                <p>Daarna moeten zij op de "coach" tab klikken.</p>
                 <img src="/images/coaches-nav.png?1" class="vertical-shadow rounded-background"/>
             </li>
             <li class="enter-email">
                 <!-- Are you a flying chimpanzee? Are you changing this element or anything inside?
                 If you answered yes to any of these questions, please update the positioning of the coach email.
                 Look in default.css for #empty-class ol li.enter-email div.coach-email -->
-                <p>Tenslotte moeten zij het e-mailadres van hun coach invullen en op<em>Coach toevoegen</em> klikken.</p>
+                <p>Tenslotte moeten zij het e-mailadres van hun coach invullen en op<em> Coach toevoegen</em> klikken.</p>
                 {% if UserData.current() %}
                     <p>Jouw coach ID is <strong>{{ coach_email|escape }}</strong>.</p>
                 {% else %}
