--- a/javascript/exercises-package/problem-template.handlebars
+++ b/javascript/exercises-package/problem-template.handlebars
@@ -40,7 +40,7 @@
 			<div class="info-box hint-box">
 				<span class="info-box-header">Hulp nodig?</span>
 				<div id="get-hint-button-container">
-					<input id="hint" type="button" class="simple-button orange full-width" value="Help mij" name="hint"/>
+					<input id="hint" type="button" class="simple-button orange full-width" value="Geef mij een hint" name="hint"/>
 				</div>
 				<span id="hint-remainder"></span>
 			</div>
