--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -19,7 +19,7 @@
 				<li style="font-size:14px;"><a href="http://blog.khanacademie.nl/p/maak-filmpjes.html">het maken van uitlegvideo's</a></li>
 				<li style="font-size:14px;"><a href="http://blog.khanacademie.nl/p/content-voor-taaloefeningen.html">het ontwikkelen van content voor taaloefeningen</a></li>
 			</ul>
-			<p>Daarnaast zijn we erg benieuwd naar ervaringen uit de praktijk. Buitenlandse ervaringen staan op&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://www.khanacademy.org/stories" target="_blank">http://www.khanacademy.org/stories</a>
+			<p>Daarnaast zijn we erg benieuwd naar ervaringen uit de praktijk. Buitenlandse ervaringen staan op;&nbsp; <a href="http://www.khanacademy.org/stories" target="_blank">http://www.khanacademy.org/stories</a>
 		</p>		
 		<p>Jan Knevers deelt elke week zijn ervaringen in de klas op <a href="http://blog.khanacademie.nl" target="_blank">blog.khanacademie.nl</a>
 		</p>
@@ -49,11 +49,7 @@
 					LinkedIn
 				</a>
 			</p>
-			<p>
-			Wil jij de Khan Academie ook op jouw school gebruiken?
-			<a href="/toolkit">Lees meer</a> en vraag jouw school een
-			<a href="/nl-content/gettingstarted.html#schools">aanmeldformulier in te sturen</a>.
-			</p>
+
 	</div>
 		<div class="clear"></div>
 		<hr>
