--- a/templates/macros/exercises.html
+++ b/templates/macros/exercises.html
@@ -1,11 +1,11 @@
 {% macro exercise_legend() -%}
 <div class="exercise-legend" style="">
     <span class="exercise-color proficient"></span>
-    <span class="legend-label proficient">Proficient</span>
+    <span class="legend-label proficient">Bedreven</span>
     <span class="exercise-color suggested"></span>
     <span class="legend-label suggested ">Aanbevolen</span>
     <span class="exercise-color review"></span>
-    <span class="legend-label review">Review</span>
+    <span class="legend-label review">Herzien</span>
 </div>
 {%- endmacro %}
 
