--- a/javascript/profile-package/profile.handlebars
+++ b/javascript/profile-package/profile.handlebars
@@ -80,7 +80,7 @@
     </ul>
     <ul class="zero-top-margin">
         <li>
-            <span class="inactive link-section-header">Gemeenschap</span>
+            <span class="inactive link-section-header">Gedeeld</span>
         </li>
     </ul>
     <ul class="zero-top-margin community-discussion">
