--- a/templates/coach_resources/toolkit_content/index.html
+++ b/templates/coach_resources/toolkit_content/index.html
@@ -7,10 +7,10 @@
 
     <p class="lead">Wij willen blijven leren van inspirerende leraren, coaches en leerlingen.</p>
 		
-	<p>Vanaf september 2012 zullen wij samenwerken met scholen die de Khan Academie in de klas gebruiken. Door deze samenwerkingsverbanden willen wij meer te weten komen over hoe onze gereedschappen in de klas worden gebruikt en hoe wij de Khan Academie kunnen verbeteren.</p>
-	<p>Allereerst, kom te weten wat Salman Khan denkt over het mixen van digitaal en fysiek leren:</p>
+	<p>Vanaf september 2012 werken wij samen met scholen die de Khan Academie in de klas gebruiken. Door deze samenwerkingsverbanden komen wij meer te weten hoe de toolkit in de klas wordt gebruikt en hoe wij de Khan Academie kunnen verbeteren.</p>
+	<p>Allereerst, kom te weten hoe Salman Khan denkt over het mixen van digitaal en fysiek leren:</p>
 	<iframe width="560" height="315" src="http://www.youtube.com/embed/0OtSs2xEpzY" frameborder="0" allowfullscreen></iframe>
-	<p><strong>Let op:</strong> Wij werken nog aan onze gereedschapskist. Wij krijgen graag <a href="http://khanacademy.desk.com/customer/portal/questions/170780-i-wish-there-were-this-feature-on-khan-academy-">jouw feedback</a> over a) hoe wij de Khan Academie kunnen verbeteren en  b) welke gereedschappen jij goed kunt gebruiken. Daar staat tegenover, dat wij jou bedanken met glimlachen en dankbaarheid :)</p>
+	<p><strong>Let op:</strong> Wij werken nog aan onze toolkit. Wij krijgen graag <a href="http://khanacademy.desk.com/customer/portal/questions/170780-i-wish-there-were-this-feature-on-khan-academy-">jouw feedback</a> over a) hoe wij de Khan Academie kunnen verbeteren en  b) welke gereedschappen jij goed kunt gebruiken. Daar staat tegenover, dat wij jou bedanken met glimlachen en dankbaarheid :)</p>
 
 	<p><a href="{{base_url}}/how-to-use-this-toolkit" class="call-to-action simple-button green">Volgende: Hoe gebruik ik de gereedschapskist? →</a></p>
 
@@ -22,7 +22,7 @@
 	<span class="video-link"><iframe width="90%" height="150" src="http://www.youtube.com/embed/RoGgxrCsCEQ" frameborder="0" allowfullscreen></iframe></span>
 	<ul class="bullet">
 		<li><a href="http://www.khanacademy.org/talks-and-interviews/v/the-gates-notes---students-in-los-altos">Het perspectief van leerlingen (video)</a></li>
-		<li><a href="http://www.khanacademy.org/talks-and-interviews/v/the-gates-notes--administrators-in-los-altos">Het perspectief van beeerders (video)</a></li>
+		<li><a href="http://www.khanacademy.org/talks-and-interviews/v/the-gates-notes--administrators-in-los-altos">Het perspectief van beheerders (video)</a></li>
     </ul>
 </div>
 {% endblock col2content %}
