--- a/templates/coach_resources/toolkit_content/technology.html
+++ b/templates/coach_resources/toolkit_content/technology.html
@@ -2,34 +2,29 @@
 
 {% block col1content %}
 		
-	<h1>Technology</h1>
+	<h1>Technologie</h1>
 	<hr>
-	<p class="lead">Khan Academy is ready to go with a reliable internet connection and a modern web browser.</p>
+	<p class="lead">Voor het gebruik van Khan Academie is slechts een internetverbinding en een moderne webbrowser nodig.</p>
 	
-	<p>Since beginning our work with schools in late 2010, we've seen schools successfully use a variety of devices and browsers. The most important things to have in place are accounts for logging in to KA, computers and devices, and internet connectivity.</p>
+	<p>Khan Academie is op alle browsers te gebruiken. Voor Internet-explorer is het gebruik van één van de laatste twee versies vereist. </p>
 	
 	<h3>Log-in / accounts</h3>
-	<p>For a large number of accounts, we recommend Google Apps for Education (described in the <a href="/toolkit/setting-up-accounts">accounts section</a>). Google Apps for Education is the only way to register students under age 13 on Khan Academy (with appropriate parental consent).</p>
-	<p>Today, for all users, we support Google and Facebook authentication; we do not have our own authentication service.</p>
+	<p>Als je veel accounts wilt gebruiken, raden wij het gebruik van Google Apps for Education (described in the <a href="/toolkit/setting-up-accounts">aan </a>)</p>
+	<p>Op dit moment is het alleen mogelijk om met een Google- of Facebookaccount aan te melden. In de toekomst zal dit uitgebreid worden.</p>
 	
-	<h3>Computers and devices</h3>
-	<p>Khan Academy runs entirely in your browser, and there is no special software required to use the site, so you can access KA with any device that runs a modern internet browser. In the schools we work with we have seen the whole gamut including laptops, Chromebooks, Netbooks, iPads, and other tablet devices.</p>
-	<p>We recommend having a 1:1 student-to-computer ratio in the classroom when using KA. At many schools, classroms share laptop carts. We've also seen some schools employ an open-access policy that permits students to bring in their own devices.</p>
+	<h3>Computers en apparaten</h3>
+	<p>Om Khan Academie te gebruiken is geen speciale software vereist. Het platform kan gebruikt worden op laptops, Notebooks, Netbooks, pc's, macs of tablets.</p>
 	
-	<h3>Internet connectivity</h3>
-	<p>Classrooms should have adequate access-point availability and bandwidth:</p>
+	<h3>Internet verbinding</h3>
+	<p>Er is slechts een internetverbinding vereist. 1.5 MBps is de minimale vereiste. Voor het afspelen van video's raden wij een hogere internetverbinding aan.<p>
 	<ul class="bullet">
-		<li><strong>Access points</strong>
-		For full access to the site, make sure your wireless can accommodate every student working simultaneously on Khan Academy</li>
-		<li><strong>Connection speed (bandwidth)</strong>
-		Khan Academy requires a broadband connection (~1.5 Mbps for a single machine viewing standard definition video) to watch videos, practice using exercises, and view data</li>
-	</ul>	
-	
-	<h3>YouTube filtering</h3>
-	<p>If you'd like your students to be able to watch Khan Academy videos and other educational content without giving them full access to YouTube, you can sign up for <a href="http://youtube.com/education_signup">YouTube for Schools</a></li>. Find full details on setting up YouTube for Schools <a href="http://support.google.com/youtube/bin/answer.py?hl=en&answer=1686318">here</a>.</p>
 	
 	
-	<p><a href="{{base_url}}/navigating-the-site" class="call-to-action simple-button green">Next: Navigating the site →</a></p>
+	<h3>YouTube filter</h3>
+	<p>Als je wilt dat je leerlingen alleen gebruik kunnen maken van de Khan-video's (en dus niet van andere Youtube-content), kun je je opgeven voor<a href="http://youtube.com/education_signup">YouTube voor scholen</a></li>. Meer uitleg vind je op <a href="http://www.youtube.com/schools"></a>.</p>
+	
+	
+	<p><a href="{{base_url}}/navigating-the-site" class="call-to-action simple-button green">Volgende: Navigatie →</a></p>
 
 {% endblock col1content %}	
 		
